; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_perspective.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_perspective.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (i32, float, float, float, float, float, float)* }

@thread_graphics = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"gs_perspective\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_perspective(float %0, float %1, float %2, float %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  store float %0, float* %5, align 4
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** @thread_graphics, align 8
  store %struct.TYPE_5__* %14, %struct.TYPE_5__** %9, align 8
  %15 = call i32 @gs_valid(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  br label %47

18:                                               ; preds = %4
  %19 = load float, float* %7, align 4
  %20 = load float, float* %5, align 4
  %21 = call float @RAD(float %20)
  %22 = fmul float %21, 5.000000e-01
  %23 = call float @tanf(float %22) #3
  %24 = fmul float %19, %23
  store float %24, float* %13, align 4
  %25 = load float, float* %13, align 4
  %26 = fneg float %25
  store float %26, float* %12, align 4
  %27 = load float, float* %12, align 4
  %28 = load float, float* %6, align 4
  %29 = fmul float %27, %28
  store float %29, float* %10, align 4
  %30 = load float, float* %13, align 4
  %31 = load float, float* %6, align 4
  %32 = fmul float %30, %31
  store float %32, float* %11, align 4
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i32 (i32, float, float, float, float, float, float)*, i32 (i32, float, float, float, float, float, float)** %35, align 8
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load float, float* %10, align 4
  %41 = load float, float* %11, align 4
  %42 = load float, float* %12, align 4
  %43 = load float, float* %13, align 4
  %44 = load float, float* %7, align 4
  %45 = load float, float* %8, align 4
  %46 = call i32 %36(i32 %39, float %40, float %41, float %42, float %43, float %44, float %45)
  br label %47

47:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

; Function Attrs: nounwind
declare dso_local float @tanf(float) #2

declare dso_local float @RAD(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
